# finsee

./: .gitignore  Contributing.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
assets/: app.css
assets/js/: app.js
assets/js/homepage/: index.js
assets/riot/: app.riot  banner.riot  navbar.riot
expenditure/: models.py  serializers.py  urls.py  views.py
expenditure/migrations/: 0001_initial.py
finsee/: settings.py  urls.py  wsgi.py
finsee/static/: app.css  app.js
homepage/: views.py
homepage/templates/homepage/: index.html
income/: forms.py  models.py  serializers.py  urls.py  views.py
income/migrations/: 0001_initial.py
income/templates/income/: income_list.html
outcome/: models.py  serializers.py  urls.py  views.py
outcome/migrations/: 0001_initial.py
src/finsee/app/: settings.py  urls.py  wsgi.py
src/finsee/expenditure/: apps.py  models.py  serializers.py  urls.py  views.py
src/finsee/expenditure/migrations/: 0001_initial.py  0002_alter_expenditure_id_alter_expenditureincome_id_and_more.py
src/finsee/income/: apps.py  models.py  serializers.py  urls.py  views.py
src/finsee/income/migrations/: 0001_initial.py  0002_alter_income_id.py
src/finsee/outcome/: apps.py  models.py  serializers.py  urls.py  views.py
src/finsee/outcome/migrations/: 0001_initial.py  0002_alter_outcome_id_alter_outcomecategory_id_and_more.py
src/finsee/utils/: models.py  views.py
utils/: models.py  views.py
