[tool.poetry]
name = "finsee"
version = "0.4.0"
description = "Financial Notes both income and outcome"
authors = ["ahmadsyafrudin <sfrmd4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1"
honcho = "^1.1.0"
psycopg2-binary = "^2.9.4"
djangorestframework = "^3.14.0"
bump2version = "^1.0.1"

[tool.poetry.dev-dependencies]
coverage = "^6.5.0"
pytest = "^7.1.3"
black = "^22.10.0"
pre-commit = "^2.20.0"
honcho = "^1.1.0"

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"
