[tool.poetry]
name = "finsee"
version = "0.4.0"
description = "Financial Notes both income and outcome"
authors = ["ahmadsyafrudin <sfrmd4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
honcho = "^1.1.0"
psycopg2-binary = "^2.9.4"
djangorestframework = "^3.14.0"
bump2version = "^1.0.1"

[tool.poetry.dev-dependencies]
coverage = "^7.3.2"
pytest = "^7.4.2"
black = "^23.9.1"
pre-commit = "^3.5.0"
honcho = "^1.1.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"
